Fixed for local execution

--- a/quickstarts/Function_calling.ipynb
+++ b/quickstarts/Function_calling.ipynb
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "TS9l5igubpHO"
       },
@@ -108,14 +108,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "ab9ASynfcIZn"
       },
       "outputs": [],
       "source": [
-        "from google.colab import userdata\n",
-        "GOOGLE_API_KEY=userdata.get('GOOGLE_API_KEY')\n",
+        "import os\n",
+        "GOOGLE_API_KEY=os.environ.get('GOOGLE_API_KEY')\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ]
     },
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "42b27b02d2f5"
       },
@@ -153,11 +153,12 @@
               "    model_name='models/gemini-1.0-pro',\n",
               "    generation_config={},\n",
               "    safety_settings={},\n",
-              "    tools=<google.generativeai.types.content_types.FunctionLibrary object at 0x7a99071b61d0>,\n",
+              "    tools=<google.generativeai.types.content_types.FunctionLibrary object at 0x000002ACCC0BCC10>,\n",
+              "    system_instruction=None,\n",
               ")"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -205,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "d3b91c855257"
       },
@@ -227,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "81d8def3d865"
       },
@@ -235,10 +236,10 @@
         {
           "data": {
             "text/plain": [
-              "'There are 2508 mittens in total.'"
+              "'You have 2508 mittens in total.'"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -250,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "951c0f83f72e"
       },
@@ -261,7 +262,7 @@
               "2508"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -296,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "9f7eff1e8e60"
       },
@@ -311,7 +312,7 @@
             "--------------------------------------------------------------------------------\n",
             "user -> [{'function_response': {'name': 'multiply', 'response': {'result': 2508.0}}}]\n",
             "--------------------------------------------------------------------------------\n",
-            "model -> [{'text': 'There are 2508 mittens in total.'}]\n",
+            "model -> [{'text': 'You have 2508 mittens in total.'}]\n",
             "--------------------------------------------------------------------------------\n"
           ]
         }
@@ -367,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "46ba0fa3d09a"
       },
@@ -415,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "8i3SKdy18WHu"
       },
@@ -442,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "5e3b9c84d883"
       },
@@ -454,15 +455,15 @@
               "  name: \"find_theaters\"\n",
               "  args {\n",
               "    fields {\n",
-              "      key: \"location\"\n",
-              "      value {\n",
-              "        string_value: \"Mountain View, CA\"\n",
-              "      }\n",
-              "    }\n",
-              "    fields {\n",
               "      key: \"movie\"\n",
               "      value {\n",
               "        string_value: \"Barbie\"\n",
+              "      }\n",
+              "    }\n",
+              "    fields {\n",
+              "      key: \"location\"\n",
+              "      value {\n",
+              "        string_value: \"Mountain View, CA\"\n",
               "      }\n",
               "    }\n",
               "  }\n",
@@ -470,7 +471,7 @@
               "]"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -501,7 +502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "rjkZ8MA00Coc"
       },
@@ -541,7 +542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "gdb62GstAD_3"
       },
@@ -550,7 +551,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Theaters showing Barbie in Mountain View, CA are: Googleplex 16, Android Theatre\n"
+            "The following theaters in Mountain View show Barbie: Googleplex 16, Android Theatre.\n"
           ]
         }
       ],
@@ -628,6 +629,18 @@
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.11"
     }
   },
   "nbformat": 4,
