--- a/quickstarts/Streaming.ipynb
+++ b/quickstarts/Streaming.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "79EWm0DAmy-g"
       },
@@ -86,14 +86,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "t9O-OzeAKC_m"
       },
       "outputs": [],
       "source": [
         "import os\n",
-        "genai.configure(api_key=os.environ['GOOGLE_API_KEY'])"
+        "GOOGLE_API_KEY=os.environ.get('GOOGLE_API_KEY')\n"
       ]
     },
     {
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "nVWWGBsBok3m"
       },
@@ -120,31 +120,33 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "In the quaint little cottage nestled amidst sprawling meadows, there lived two adorable cats named\n",
+            "In the cozy confines of a sunlit cottage, amidst a flurry of playful antics\n",
             "________________________________________________________________________________\n",
-            " Whiskers and Mittens. Whiskers, a sleek black feline with emerald-green eyes, was known for his playful antics and mischievous nature. Mittens,\n",
+            ", resided two extraordinary felines named Mittens and Whiskers.\n",
+            "\n",
+            "Mittens, with her soft, ebony fur and piercing emerald eyes, exuded an air\n",
             "________________________________________________________________________________\n",
-            " on the other hand, was a demure white cat with piercing blue eyes and a soft, fluffy coat. She often curled up in a ball, purring contentedly by the fireplace.\n",
+            " of regal elegance. Whiskers, on the other hand, was a mischievous tabby with a penchant for adventure.\n",
             "\n",
-            "One sunny afternoon, as Whiskers and Mittens basked in the warm sunlight streaming through the window, a playful thought crossed\n",
+            "One lazy afternoon, as the sun peeked through the windowpanes, Mittens and Whiskers lay curled up together on a plush velvet cushion. Mittens' rhythmic purring filled the air, creating an\n",
             "________________________________________________________________________________\n",
-            " Whiskers' mischievous mind. He stealthily crept behind Mittens and gently nudged her with his velvety nose. Mittens, startled, jumped up and spun around, her tail twitching in amusement.\n",
+            " atmosphere of blissful serenity.\n",
             "\n",
-            "\"Oh, hello, Whiskers,\" Mittens purred, her voice as sweet as honey. \"What a pleasant surprise.\"\n",
+            "Suddenly, a playful twitch in Whiskers' whiskers caught Mittens' attention. He had spotted a dangling toy mouse at the edge of the table. With lightning-fast reflexes, he pounced upon it, its rattling sound echoing through the room.\n",
             "\n",
-            "Whiskers feigned innocence and rubbed his head against her leg. \"My dear Mittens, I couldn't resist disturbing your sleepy slumber. How can you possibly resist such a charming feline?\"\n",
+            "Mittens, unable to resist the allure of the chase, darted after her companion. They raced around the cottage, their tiny paws pattering on the hardwood floor. Whiskers' agility proved to be no match for Mittens' speed, and she quickly overtook him.\n",
             "\n",
-            "Mittens couldn't help but chuckle at Whiskers' antics. \"You sly cat\n",
+            "They tumbled and wrestled with the toy, their eyes sparkling with joy. The laughter\n",
             "________________________________________________________________________________\n",
-            ",\" she said. \"You know you're the one who interrupted my nap.\"\n",
+            " of their owners filled the room, adding to the symphony of feline antics.\n",
             "\n",
-            "Unfazed, Whiskers continued to charm Mittens, weaving tales of his daring adventures and making her laugh with his silly jokes. Mittens, unable to resist his infectious enthusiasm, found herself drawn into his playful antics.\n",
+            "As the chase reached its climax, Mittens pounced upon the mouse, sinking her teeth into its fabric. Whiskers, not to be outdone, reached out a paw and snatched it away.\n",
             "\n",
-            "As the sun began to set, casting a golden glow over the meadow, Whiskers and Mittens found themselves chasing each other through the fields. They leaped over fences, scampered through wildflowers, and chased butterflies with abandon. The playful laughter of the cats echoed through the air, mingling with the sweet scent of blooming roses.\n",
+            "Back and forth they went, their tiny bodies writhing with excitement. Finally, Whiskers pinned the toy beneath his paw and meowed triumphantly.\n",
             "\n",
-            "Finally, as darkness enveloped the meadow, Whiskers and Mittens made their way back to the cottage, exhausted but content. They curled up together on the soft rug in front of the fireplace, purring softly as they drifted off to sleep.\n",
+            "Mittens, with her usual poise, simply raised an eyebrow and let out a soft purr. She had allowed Whiskers his moment of glory.\n",
             "\n",
-            "In the cozy warmth of the cottage, surrounded by the love of her playful companion, Mittens realized that true happiness could be found in the simplest of moments. And so, as the night wore on, Whiskers and Mittens slept soundly, their bond unbreakable, their hearts filled with love and purrfect contentment.\n",
+            "And so, the afternoon passed in a haze of feline playtime, filled with laughter, adventure, and an unbreakable bond between two unlikely companions.\n",
             "________________________________________________________________________________\n"
           ]
         }
@@ -172,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "n6sXnWrJoKoo"
       },
@@ -181,41 +183,27 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The sun peeked through the window, casting golden rays upon the sleeping form of\n",
+            "In the quaint little town of Willow Creek, where verdant meadows met cozy cottages\n",
             "________________________________________________________________________________\n",
-            " Mittens. Her soft, white fur gently rose and fell with each breath, her tiny paws twitching as she chased invisible mice in her dreams.\n",
-            "\n",
-            "Next\n",
+            ", there lived two extraordinary cats named Mittens and Whiskers. Mittens, with her shimmering silver fur and piercing blue eyes, possessed an air of quiet elegance\n",
             "________________________________________________________________________________\n",
-            " to her, curled up in a cozy ball, was her mischievous companion, Whiskers. His velvety black fur glistened, and his emerald eyes sparkled with feline wisdom. With his tail curled around himself, he dozed contentedly, his gentle purring filling the air.\n",
+            ". Whiskers, on the other hand, was a mischievous bundle of energy with his playful brown stripes and a perpetual glint in his eyes.\n",
             "\n",
-            "As the sun climbed higher,\n",
+            "Together, they were the best of friends, their bond unbreakable. Every morning, they would greet the rising sun from their favorite perch on the windowsill, Mittens\n",
             "________________________________________________________________________________\n",
-            " it reached Mittens' eyelids, causing her to stir. She stretched lazily, her long, slender body unfurling like a delicate ribbon. A soft meow escaped her lips, and Whiskers opened one eye sleepily.\n",
+            " purring contentedly while Whiskers gazed wide-eyed at the world below.\n",
             "\n",
-            "\"Good morning, Mittens,\" he said, his voice a velvety whisper. \"Time for breakfast.\"\n",
+            "One sunny afternoon, as they chased butterflies through the backyard, their adventure led them to a secret garden hidden behind a tall hedge. As they cautiously entered, their senses were filled with the sweet scent of honeysuckle and the vibrant colors of blooming flowers.\n",
             "\n",
-            "Mittens purred and jumped down from the bed, her graceful movements a testament to her inherent agility. Whiskers followed suit, his nimble paws carrying him to the kitchen.\n",
+            "Suddenly, a peculiar sound caught their attention. Nestled amidst the petals of a rose bush, a tiny creature was whimpering softly. Mittens approached cautiously, her gentle paws reaching out to comfort the trembling bird.\n",
             "\n",
-            "As they approached their food bowls, Mittens couldn't help but notice something peculiar. \"Whiskers,\" she\n",
+            "Whiskers, ever the protector, stood guard, his tail twitching\n",
             "________________________________________________________________________________\n",
-            " exclaimed, \"there's something... in my bowl.\"\n",
+            " nervously. Together, they watched as Mittens carefully lifted the bird into her paws and carried it towards the edge of the garden.\n",
             "\n",
-            "Whiskers peered into the bowl and gasped. There, nestled among the kibble, was a tiny, iridescent ball.\n",
+            "As they stepped out into the sunlight, they noticed a kind-looking woman nearby. Mittens handed the bird to her, explaining that they had found it in the garden. The woman thanked them profusely and promised to care for it.\n",
             "\n",
-            "\"Oh my stars!\" cried Whiskers. \"It's a bell!\"\n",
-            "\n",
-            "Mittens was overjoyed. \"That's perfect!\" she meowed. \"Now I can jingle my way around the house and make everyone smile.\"\n",
-            "\n",
-            "With newfound excitement, Mittens and Whiskers tucked into their breakfast. As they ate, the kitchen filled with a chorus of happy meows and the cheerful jingle of Mittens' bell.\n",
-            "\n",
-            "Throughout the day, the two cats reveled in their newfound accessory. Mittens proudly jingled her bell as she explored the house, while Whiskers couldn't resist batting it playfully with his paws. Together, they created a symphony of sounds that brought joy to everyone who heard them.\n",
-            "\n",
-            "As the sun began to set, Mittens and Whiskers curled up on the sofa, exhausted but content. The jingle of Mittens' bell gradually subsided, replaced by the gentle sound of their purring.\n",
-            "\n",
-            "And so, in the cozy confines of their home, the two feline companions drifted off to sleep, their hearts filled with love and the whimsical\n",
-            "________________________________________________________________________________\n",
-            " sound of a tiny bell.\n",
+            "From that day forward, Mittens and Whiskers became known as the \"Garden Guardians.\" They spent their days exploring the secret garden, protecting its furry and feathered inhabitants. And every evening, they would curl up together on the windowsill, their purrs and meows filling the cozy cottage with a perfect symphony of feline contentment.\n",
             "________________________________________________________________________________\n"
           ]
         }
@@ -237,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "IJ-8SjYwKC_o"
       },
@@ -247,31 +235,33 @@
           "output_type": "stream",
           "text": [
             "==========not blocked!==========\n",
-            "In the quaint little cottage nestled amidst a verdant meadow, resided two adorable cats\n",
+            "In the quaint little cottage nestled amidst a meadow of wildflowers, there lived an extraordinary\n",
             "________________________________________________________________________________\n",
-            " named Mittens and Whiskers. Mittens, with her soft gray fur and emerald-green eyes, possessed a mischievous spark that made everyone smile. Whiskers\n",
-            "________________________________________________________________________________\n",
-            "==========not blocked!==========\n",
-            ", on the other hand, was a dignified tuxedo cat with piercing blue eyes and an air of quiet confidence.\n",
+            " trio of cats: Mittens, Whiskers, and Shadow.\n",
             "\n",
-            "One sunny afternoon, as the warm breeze carried the scent of blooming lilacs through the open window, Mittens and Whiskers found themselves lounging on the sun-drenched windowsill. As they basked\n",
+            "Mittens, the eldest, was a mischievous tabby with a twinkle in her eye. Her\n",
             "________________________________________________________________________________\n",
             "==========not blocked!==========\n",
-            " in the golden rays, their gaze fell upon a playful squirrel scampering along the branch of a nearby tree.\n",
-            "\n",
-            "Instantly, Mittens' hunter instincts ignited. She stealthily slid off the windowsill and approached the tree, her green eyes narrowed in focus. Whiskers, sensing his friend's excitement, followed suit, his tuxedo coat shimmering with curiosity.\n",
-            "\n",
-            "The squirrel, unaware of the danger lurking below, continued its carefree antics. Mittens pounced with lightning speed, but the squirrel was too quick. It leaped nimbly out of her reach, its bushy tail swishing behind it in amusement.\n",
-            "\n",
-            "Not to be\n",
+            " soft, white fur and fluffy tail made her look like a miniature lioness. Whiskers, the middle child, was a sleek black beauty with piercing green eyes. He possessed an air of elegance and a quiet confidence. Shadow, the youngest, was a timid calico with a playful spirit. Her calico pattern was a kale\n",
             "________________________________________________________________________________\n",
-            " deterred, Mittens gave chase, her tiny paws pattering along the grass. Whiskers, despite his more dignified nature, found himself caught up in the thrill of the hunt and joined in the pursuit.\n",
+            "==========not blocked!==========\n",
+            "idoscope of colors, and her blue eyes seemed to shimmer with mischief.\n",
             "\n",
-            "The chase led them through a rose garden, where the sweet fragrance of blooming flowers mingled with the sound of their laughter. They darted under trellises, weaving between fragrant petals and blooming buds.\n",
+            "One sunny afternoon, as the kittens basked on the windowsill, they noticed a curious movement in the neighboring yard. A tiny sparrow had fallen from its nest and was struggling to get back up. Mittens' heart melted with compassion, and she immediately leaped off the windowsill.\n",
             "\n",
-            "Finally, as the sun began to dip below the horizon, Mittens and Whiskers cornered the squirrel in a thicket of honeysuckle. The squirrel, its eyes wide with fear, scampered up a tree trunk and disappeared into a hole in the bark.\n",
+            "\"We must help that poor little bird,\" she declared.\n",
             "\n",
-            "Mittens and Whiskers abandoned their chase, their spirits still soaring. They had enjoyed their adventure, and the bond between them had grown even stronger. As they made their way back to the cottage, the setting sun cast a warm glow upon their furry faces, illuminating their playful hearts.\n",
+            "Whiskers, with his feline agility, scaled the fence and retrieved the sparrow. Shadow, her tail twitching with excitement, ran ahead to guide the bird back to safety.\n",
+            "\n",
+            "As they approached the nest\n",
+            "________________________________________________________________________________\n",
+            ", they realized it was too high for the sparrow to reach. Undeterred, the kittens devised a cunning plan. Mittens used her sharp claws to make a series of steps on the side of the house, while Whiskers gently pushed the sparrow up the ladder.\n",
+            "\n",
+            "Finally, with a triumphant squeak, the sparrow reached its home and was reunited with its family. The kittens watched with pride as the sparrow chirped its thanks and soared into the sky.\n",
+            "\n",
+            "From that day forward, the trio of cats became known as the \"Helpers of the Helpless.\" They continued to use their feline powers for good, rescuing small creatures in need and spreading joy wherever they went.\n",
+            "\n",
+            "And so, in the quaint little cottage, Mittens, Whiskers, and Shadow lived happily ever after, their bond of friendship and love unbreakable.\n",
             "________________________________________________________________________________\n",
             "==========not blocked!==========\n",
             "==========not blocked!==========\n"
@@ -323,6 +313,18 @@
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.11"
     }
   },
   "nbformat": 4,
