--- a/quickstarts/System_instructions.ipynb
+++ b/quickstarts/System_instructions.ipynb
@@ -86,16 +86,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "GV09SmP5qN53"
       },
       "outputs": [],
       "source": [
-        "from google.colab import userdata\n",
-        "import google.generativeai as genai\n",
+        "import os\n",
+        "GOOGLE_API_KEY=os.environ.get('GOOGLE_API_KEY')\n",
         "\n",
-        "genai.configure(api_key=userdata.get(\"GOOGLE_API_KEY\"))"
+        "import google.generativeai as genai\n",
+        "genai.configure(api_key=GOOGLE_API_KEY)"
       ]
     },
     {
@@ -109,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 4,
       "metadata": {
         "id": "xUINgOFzLnI3"
       },
@@ -123,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "metadata": {
         "id": "mWS3-GwNLzku"
       },
@@ -132,7 +133,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Meow! *purrs* I'm doing well. I just woke up from a nap in a sunbeam. \n",
+            "*Stretches languidly, unfurling from a perfect circle of slumber*  Mrrrow? *Yawns, displaying a perfect pink tongue and impossibly sharp teeth* Are you offering food? Or perhaps... chin scritches? \n",
             "\n"
           ]
         }
@@ -153,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 7,
       "metadata": {
         "id": "FqWUIw1yDSL2"
       },
@@ -168,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 8,
       "metadata": {
         "id": "WeqvS8gyMX0-"
       },
@@ -177,7 +178,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Ahoy there, matey! I be doin' ship-shape and Bristol fashion, thankin' ye kindly for askin'! And how be ye on this fine mornin'? \n",
+            "Ahoy there, matey! Shiver me timbers, I be doin' right as rain this fine mornin'!  How's yerself, eh?  Hope ye be feelin' as chipper as a seagull on a fresh catch! \n",
             "\n"
           ]
         }
@@ -200,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 9,
       "metadata": {
         "id": "WxiIfsbA0WdH"
       },
@@ -209,7 +210,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Ahoy there, matey! What brings ye to me humble ship today? 🦜  Hope you're ready for a grand adventure! 🗺️ 🏝️ \n",
+            "Ahoy there, matey! What brings ye to these digital shores? Be ye lookin' for treasure, a tale o' the high seas, or just a bit o' friendly banter? Speak yer mind, and this ol' pirate be happy to oblige! \n",
             "\n"
           ]
         }
@@ -222,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 11,
       "metadata": {
         "id": "beFAm9kvQecS"
       },
@@ -231,9 +232,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Me trusty vessel be doin' just fine, me hearty! She's as sturdy as a kraken's tentacle and as swift as a mermaid's tail. 🐙 🧜‍♀️  \n",
-            "\n",
-            "We've sailed through many a storm and she's always brought us home safe and sound.  ⚓️  \n",
+            "Shiver me timbers, she be a fine vessel, matey!  Seaworthy as a dolphin and swift as a gull in a gale. Just patched up a bit o' wear and tear from our last adventure, but she's ready for the next voyage! What about yer own vessel? Tell me, does she sail the digital seas or the ones of wood and water? \n",
             "\n"
           ]
         }
@@ -263,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 12,
       "metadata": {
         "id": "NxPCN_7euVJY"
       },
@@ -282,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 13,
       "metadata": {
         "id": "S-KQefKiJZCA"
       },
@@ -295,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 15,
       "metadata": {
         "id": "u79yE57aJasY"
       },
@@ -306,15 +305,14 @@
           "text": [
             "```html\n",
             "<div style=\"display: flex; justify-content: space-between; align-items: center;\">\n",
-            "  <h1 style=\"font-size: 3em;\">My Logo</h1>\n",
-            "  <ul style=\"list-style: none; display: flex; gap: 20px;\">\n",
-            "    <li><a href=\"#\">Link 1</a></li>\n",
-            "    <li><a href=\"#\">Link 2</a></li>\n",
-            "    <li><a href=\"#\">Link 3</a></li>\n",
+            "  <h1 style=\"font-size: 2em; margin: 0;\">Your Logo</h1>\n",
+            "  <ul style=\"list-style: none; margin: 0; padding: 0;\">\n",
+            "    <li style=\"display: inline-block; margin-left: 20px;\"><a href=\"#\">Link 1</a></li>\n",
+            "    <li style=\"display: inline-block; margin-left: 20px;\"><a href=\"#\">Link 2</a></li>\n",
+            "    <li style=\"display: inline-block; margin-left: 20px;\"><a href=\"#\">Link 3</a></li>\n",
             "  </ul>\n",
             "</div>\n",
-            "``` \n",
-            "\n"
+            "```\n"
           ]
         }
       ],
@@ -325,7 +323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 16,
       "metadata": {
         "id": "lf5919M-fwY2"
       },
@@ -335,11 +333,11 @@
             "text/html": [
               "\n",
               "<div style=\"display: flex; justify-content: space-between; align-items: center;\">\n",
-              "  <h1 style=\"font-size: 3em;\">My Logo</h1>\n",
-              "  <ul style=\"list-style: none; display: flex; gap: 20px;\">\n",
-              "    <li><a href=\"#\">Link 1</a></li>\n",
-              "    <li><a href=\"#\">Link 2</a></li>\n",
-              "    <li><a href=\"#\">Link 3</a></li>\n",
+              "  <h1 style=\"font-size: 2em; margin: 0;\">Your Logo</h1>\n",
+              "  <ul style=\"list-style: none; margin: 0; padding: 0;\">\n",
+              "    <li style=\"display: inline-block; margin-left: 20px;\"><a href=\"#\">Link 1</a></li>\n",
+              "    <li style=\"display: inline-block; margin-left: 20px;\"><a href=\"#\">Link 2</a></li>\n",
+              "    <li style=\"display: inline-block; margin-left: 20px;\"><a href=\"#\">Link 3</a></li>\n",
               "  </ul>\n",
               "</div>\n"
             ],
@@ -347,7 +345,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "execution_count": 76,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -381,6 +379,18 @@
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.11"
     }
   },
   "nbformat": 4,
