--- a/quickstarts/Function_calling_config.ipynb
+++ b/quickstarts/Function_calling_config.ipynb
@@ -85,10 +85,10 @@
       },
       "outputs": [],
       "source": [
-        "from google.colab import userdata\n",
         "import google.generativeai as genai\n",
-        "\n",
-        "genai.configure(api_key=userdata.get(\"GOOGLE_API_KEY\"))"
+        "import os\n",
+        "GOOGLE_API_KEY=os.environ.get('GOOGLE_API_KEY')\n",
+        "genai.configure(api_key=GOOGLE_API_KEY)"
       ]
     },
     {
@@ -342,6 +342,10 @@
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.11"
     }
   },
   "nbformat": 4,
