--- a/quickstarts/Models.ipynb
+++ b/quickstarts/Models.ipynb
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "49H9jQPO_TJ9"
       },
@@ -97,15 +97,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "8PXsFZBQ_XA5"
       },
       "outputs": [],
       "source": [
-        "from google.colab import userdata\n",
-        "\n",
-        "GOOGLE_API_KEY = userdata.get(\"GOOGLE_API_KEY\")\n",
+        "import os\n",
+        "GOOGLE_API_KEY=os.environ.get('GOOGLE_API_KEY')\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ]
     },
@@ -122,11 +121,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "3wE76b_gBn2k"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "models/gemini-1.0-pro\n",
+            "models/gemini-1.0-pro-001\n",
+            "models/gemini-1.0-pro-latest\n",
+            "models/gemini-1.0-pro-vision-latest\n",
+            "models/gemini-1.5-pro-latest\n",
+            "models/gemini-pro\n",
+            "models/gemini-pro-vision\n"
+          ]
+        }
+      ],
       "source": [
         "for m in genai.list_models():\n",
         "    if \"generateContent\" in m.supported_generation_methods:\n",
@@ -144,11 +157,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "lQmlIpr5JHqz"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "models/embedding-001\n",
+            "models/text-embedding-004\n"
+          ]
+        }
+      ],
       "source": [
         "for m in genai.list_models():\n",
         "    if \"embedContent\" in m.supported_generation_methods:\n",
@@ -168,11 +190,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "BYYxVE4ZnoGy"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model(name='models/gemini-1.5-pro-latest',\n",
+            "      base_model_id='',\n",
+            "      version='001',\n",
+            "      display_name='Gemini 1.5 Pro',\n",
+            "      description='Mid-size multimodal model that supports up to 1 million tokens',\n",
+            "      input_token_limit=1048576,\n",
+            "      output_token_limit=8192,\n",
+            "      supported_generation_methods=['generateContent', 'countTokens'],\n",
+            "      temperature=1.0,\n",
+            "      top_p=0.95,\n",
+            "      top_k=None)\n"
+          ]
+        }
+      ],
       "source": [
         "for m in genai.list_models():\n",
         "    if m.name == \"models/gemini-1.5-pro-latest\":\n",
@@ -192,11 +232,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "6786759016dc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model(name='models/aqa',\n",
+            "      base_model_id='',\n",
+            "      version='001',\n",
+            "      display_name='Model that performs Attributed Question Answering.',\n",
+            "      description=('Model trained to return answers to questions that are grounded in provided '\n",
+            "                   'sources, along with estimating answerable probability.'),\n",
+            "      input_token_limit=7168,\n",
+            "      output_token_limit=1024,\n",
+            "      supported_generation_methods=['generateAnswer'],\n",
+            "      temperature=0.2,\n",
+            "      top_p=1.0,\n",
+            "      top_k=40)\n"
+          ]
+        }
+      ],
       "source": [
         "model_info = genai.get_model(\"models/aqa\")\n",
         "print(model_info)"
@@ -226,6 +285,18 @@
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.11"
     }
   },
   "nbformat": 4,
