--- a/quickstarts/Video.ipynb
+++ b/quickstarts/Video.ipynb
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "ATIbQM0NHhkj"
       },
@@ -118,14 +118,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "d6lYXRcjthKV"
       },
       "outputs": [],
       "source": [
-        "from google.colab import userdata\n",
-        "GOOGLE_API_KEY=userdata.get('GOOGLE_API_KEY')\n",
+        "import os\n",
+        "GOOGLE_API_KEY=os.environ.get('GOOGLE_API_KEY')\n",
+        "\n",
+        "import google.generativeai as genai\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ]
     },
@@ -146,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "_HzrDdp2Q1Cu"
       },
@@ -166,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "jW9ilYCdL99M"
       },
@@ -175,10 +177,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Extracting https://storage.googleapis.com/generativeai-downloads/data/SherlockJr._10min.mp4 at 1 frame per second. This might take a bit...\n",
-            "Completed video frame extraction!\n",
-            "\n",
-            "Extracted: 600 frames\n"
+            "Extracting https://storage.googleapis.com/generativeai-downloads/data/SherlockJr._10min.mp4 at 1 frame per second. This might take a bit...\n"
           ]
         }
       ],
@@ -330,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "SHMVCWHkFhJW"
       },
@@ -489,6 +488,18 @@
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.11"
     }
   },
   "nbformat": 4,
